# mimocast

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  grant-submission.md
examples/: demo.py  run_demo.sh  sample_doc.md
src/mimocast/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py
src/mimocast/agents/: __init__.py  composer.py  designer.py  narrator.py  reader.py  summarizer.py
src/mimocast/clients/: __init__.py  mimo.py
src/mimocast/models/: __init__.py  schemas.py
src/mimocast/utils/: __init__.py  files.py  logger.py
tests/: conftest.py  test_cli.py  test_designer.py  test_narrator.py  test_orchestrator.py  test_reader.py  test_summarizer.py
