[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mimocast"
version = "0.1.0"
description = "MiMo Studio Orchestrator — turn any document into a narrated video deck via MiMo V2.5 (reasoner + multimodal + TTS)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "mimocast contributors" }]
keywords = ["mimo", "xiaomi", "agent", "llm", "tts", "multimodal", "video", "orchestrator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.40,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "httpx>=0.27,<1",
    "pypdf>=4.2,<6",
    "pillow>=10.3,<12",
    "ffmpeg-python>=0.2.0,<1",
    "python-dotenv>=1.0,<2",
    "tenacity>=8.3,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<7",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]
demo = [
    # Free TTS used by --demo-tts to make mock-mode MP4 audible.
    # NOT a substitute for real MiMo TTS — do not label output as MiMo.
    "gtts>=2.5,<3",
]

[project.scripts]
mimocast = "mimocast.cli:app"

[project.urls]
Homepage = "https://github.com/mimocast/mimocast"
Issues = "https://github.com/mimocast/mimocast/issues"
"MiMo API" = "https://platform.xiaomimimo.com/"

[tool.hatch.build.targets.wheel]
packages = ["src/mimocast"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
